# entilzha.github.io

./: .dockerignore  .gitignore  CNAME  Dockerfile  README.md  _redirects  build.sh  docker-compose.yml  fabfile.py  filters.py  package-lock.json  package.json  pelicanconf.py  penguin  penguin-mac  publish.sh  publishconf.py  pyproject.toml  requirements.txt
content/: CNAME
content/notebooks/: kl-divergence.ipynb
content/pages/: about.md  alexa-prize.md  curiosity.md  irt.md  mmr.md  multidim.md  paradigms.md  publications.bib  publications.md  reading.md  recruiting.md  resources.md  tips.md  violin.md
content/posts/2015/march/: scalafunctional.md
content/posts/2015/september/: pelican-blog.md
content/posts/2016/december/: wiki-network.md
content/posts/2016/march/: qanta-ai.md
content/posts/2016/november/: qanta-ai.md
content/posts/2016/september/: aws-spot-price-history.md
content/posts/2017/february/: kl-divergence.md
content/posts/2017/january/: snowpack.md
output/: index.html
output/about/: index.html
pelican/: pelicanconf.py
pelican/content/pages/: about.md
pelican/output/: index.html
pelican/theme/templates/: index.html
plugins/: pubs.py  react.py
plugins/ipynb/: liquid.py
theme/static/css/: fonts.css  lightbox.css  pygments.css  theme.css
theme/static/js/: targets.js
theme/templates/: article.html  index.html  main_page.html  page.html
theme/templates/layouts/: default.html
theme/templates/partials/: bibtex_entry.jsx  footer.html  head.html  header.html  pagination.html  summary.html
(+16 files in other folders)
